--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'java-library'
+    id 'me.champeau.gradle.jmh' version '0.4.7'
 }
+
+sourceCompatibility = '1.10'
 
 version = '0.1.0'
 
@@ -8,9 +11,15 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.6'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
 
+    compile 'org.openjdk.jmh:jmh-core:1.20'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
     testImplementation 'org.hamcrest:hamcrest-core:1.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
+
+    jmh 'com.fasterxml.jackson.core:jackson-core:2.9.6'
+    jmh 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+    jmh 'com.googlecode.json-simple:json-simple:1.1'
 }
 
 repositories {
