--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     jmh 'com.fasterxml.jackson.core:jackson-core:2.9.6'
     jmh 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
     jmh 'com.googlecode.json-simple:json-simple:1.1'
+    jmh 'com.google.code.gson:gson:2.8.5'
 }
 
 repositories {
